image Backslash fixed

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <section class="contStars">
       <div class="contStarsImg">
         <div>
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
         </div>
         <div>
           <h5>Rated 5 Stars in Reviews</h5>
@@ -45,11 +45,11 @@
       </div>
       <div class="contStarsImg contStarsImgleft">
         <div>
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
         </div>
         <div>
           <h5>Rated 5 Stars in Report Guru</h5>
@@ -57,11 +57,11 @@
       </div>
       <div class="contStarsImg contStarsImgleft2">
         <div>
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
-          <img src="images\icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
+          <img src="images/icon-star.svg" alt="">
         </div>
         <div>
           <h5>Rated 5 Stars in BestTech</h5>
@@ -71,7 +71,7 @@
     <section class="contCards">
       <div class="contCardsItem">
         <div>
-          <img src="images\image-colton.jpg" alt="">
+          <img src="images/image-colton.jpg" alt="">
         </div>
         <div>
           <h5>Colton Smith</h5>
@@ -85,7 +85,7 @@
       </div>
       <div class="contCardsItem contCardsItem2">
         <div>
-          <img src="images\image-irene.jpg" alt="">
+          <img src="images/image-irene.jpg" alt="">
         </div>
         <div>
           <h5>Irene Roberts</h5>
@@ -98,7 +98,7 @@
       </div>
       <div class="contCardsItem contCardsItem3">
         <div>
-          <img src="images\image-anne.jpg" alt="">
+          <img src="images/image-anne.jpg" alt="">
         </div>
         <div>
           <h5>Anne Wallace</h5>
