--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Social proof section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution {
       font-size: 11px;
       text-align: center;
@@ -20,7 +20,7 @@
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -119,7 +119,7 @@
 
 
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     <div>
       <span>Challenge by</span>
       <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA" target="_blank">Frontend Mentor</a>.
@@ -128,7 +128,20 @@
       <span>Coded by</span>
       <a href="https://github.com/FranciscoFrontEndDeveloper" target="_blank">Francisco Becerra Rodriguez</a>.
     </div>
+  </div> -->
+
+  <div class="containerFooter">
+    <div class="attribution">
+      <h3>
+        Challenge by <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA"
+          target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/FranciscoFrontEndDeveloper" target="_blank">francisco becerra
+          rodriguez</a>.
+      </h3>
+    </div>
   </div>
+
+
 </body>
 
 </html>
